--- a/Hardware/rev 1 updated BOM/readme.me
+++ b/Hardware/rev 1 updated BOM/readme.me
@@ -1,6 +1,7 @@
-NOTE!
-Also add to your shopping cart:
+<b>Also add following parts to your shopping cart*:</b>
 Axoloti Pinout: 1x37 pin male header row
 Axoloti Power: 1x5 pin male header row
 Axo <-> Euxo Connection: 36pin female header row  
 Axo <-> Euxo Power: 1x5 pin female header row 
+
+*parts are not listed in BOMs
