--- a/Hardware/rev 1 updated BOM/readme.me
+++ b/Hardware/rev 1 updated BOM/readme.me
@@ -1,4 +1,4 @@
-<b>Also add following parts to your shopping cart*:</b>
+<p>Also add following parts to your shopping cart*:</p>
 Axoloti Pinout: 1x37 pin male header row
 Axoloti Power: 1x5 pin male header row
 Axo <-> Euxo Connection: 36pin female header row  
