--- a/Hardware/rev 1 updated BOM/readme.me
+++ b/Hardware/rev 1 updated BOM/readme.me
@@ -1,3 +1,5 @@
+## The second largest heading
+
 ## Please, also add following parts to your shopping cart:
 Axoloti Pinout: 1x37 pin male header row
 Axoloti Power: 1x5 pin male header row
